possibility to set railway station index via web added

--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -10,7 +10,13 @@
   <% if @route.railway_stations.empty? %>
     Станции маршруту не назначены
   <% else %>
-    <%= render 'sorted_to_increase' %>
+    <table>
+      <thead>
+        <th>Название станции</th>
+        <th>Позиция в маршруте</th>
+      </thead>
+      <%= render 'sorted_to_increase' %>
+    </table>
   <% end %>
 </p>
 
