--- a/app/views/routes/_sorted_to_increase.html.erb
+++ b/app/views/routes/_sorted_to_increase.html.erb
@@ -1,8 +1,11 @@
 <% @route.stations_sorted_to_increase.each do |station, index| %>
-<ul>
-  <li>
-    <%= index %>
-    <%= station.title %>
-  </li>
-</ul>
+  <tr>
+    <td><%= station.title %></td>
+    <td><%= form_tag set_index_railway_station_path(station), method: :patch do %>
+          <%= number_field_tag :position, station.show_index_on(@route)  %>
+          <%= hidden_field_tag :route_id, @route.id %>
+          <%= submit_tag 'Изменить' %>
+        <% end %>
+    </td>
+  </tr>
 <% end %>
