--- a/app/views/vans/index.html.erb
+++ b/app/views/vans/index.html.erb
@@ -1,24 +1,1 @@
-<p id="notice"><%= notice %></p>
-  <h1>Доступные вагоны:</h1>
-
-  <% if !@vans.count.zero? %>
-    <table>
-      <thead>
-        <tr>
-          <th colspan="3">Доступные действия</th>
-          <th>Поезд</th>
-          <th>Тип</th>
-          <th>#</th>
-          <th colspan="3">Доступные места в вагоне и их количество</th>
-        </tr>
-      </thead>
-
-      <tbody><%= render @vans %></tbody>
-    </table>
-  <% else %>
-  <p>Нет доступных вагонов</p>
-  <% end %>
-
-  <br>
-
-  <%= link_to 'Создать новый вагон', new_van_path %>
+<%= render @train.sort_vans %>
