--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -3,30 +3,35 @@
 <p>
   <strong>Поезд номер:</strong>
   <%= @train.number %>
+  <br />
+  <%= link_to 'Добавить вагон', new_train_van_path(@train) %>
 
   <% if @train.vans.empty? %>
     <br />
     К поезду не присоединены вагоны
+    <br />
   <% else %>
-  <br /> 
-  <strong>Вагоны:</strong>
-  <%= render @train.sort_vans, train: @train %>
+    <br />
+    <strong>Вагоны:</strong>
+    <%= render @train.sort_vans %>
     <%= form_for(@train) do |form| %>
-      <div><%= form.radio_button(:sort_by, "asc") %>В сторону увеличения
-                      <%= form.radio_button(:sort_by, "desc") %>В сторону уменьшения
-                      <%= form.submit 'Сортировать' %></div>
+      <div>
+        <%= form.radio_button(:sort_by, "asc") %>В сторону увеличения
+        <%= form.radio_button(:sort_by, "desc") %>В сторону уменьшения
+        <%= form.submit 'Сортировать' %>
+      </div>
     <% end %>
 </p>
 <p>
-    Вы можете указать тип вагона и интересующие Вас места для получения информации о них
-    <%= form_for(@train) do |form| %>
-      <%= form.label :van_type_to_more_info, 'Выберите тип вагона:' %>
-      <%= form.collection_select :van_type_to_more_info, @train.vans_collection, :first, :last %>
-      <%= form.label :places_type_to_more_info, 'Выберите тип мест:' %>
-      <%= form.collection_select :places_type_to_more_info, SeatsKind.all, :seats_type, :title %>
-      <p><%= form.submit 'Найти' %></p>
-    <% end %>
-    <%= @train.adv_info %>
+      Вы можете указать тип вагона и интересующие Вас места для получения информации о них
+      <%= form_for(@train) do |form| %>
+        <%= form.label :van_type_to_more_info, 'Выберите тип вагона:' %>
+        <%= form.collection_select :van_type_to_more_info, @train.vans_collection, :first, :last %>
+        <%= form.label :places_type_to_more_info, 'Выберите тип мест:' %>
+        <%= form.collection_select :places_type_to_more_info, SeatsKind.all, :seats_type, :title %>
+        <p><%= form.submit 'Найти' %></p>
+      <% end %>
+      <%= @train.adv_info %>
   <% end %>
 </p>
 <p>
