--- a/app/views/vans/_van.html.erb
+++ b/app/views/vans/_van.html.erb
@@ -1,15 +1,3 @@
 <tr>
-    <% if @train %>
-      <td><%= link_to "##{resource.number}", van_path(resource) %></td>
-    <% else %>
-    <p>
-      <td class='action'><%= link_to 'Показать', van_path(resource) %></td>
-      <td class='action'><%= link_to 'Изменить', edit_van_path(resource) %></td>
-      <td class='action delete'><%= link_to 'Удалить', van_path(resource), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <td>Поезд: <%= resource.train.number unless @train %></td>
-      <td>Тип: <%= resource.show_self_type %></td>
-      <td>#<%= resource.number %></td>
-      <td>Места: <%= render 'vans/seats', resource: resource %></td>
-    </p>
-    <% end %>
+  <td><%= link_to "вагон ##{resource.number}", train_van_path(@train, resource) %></td>
 </tr>
