--- a/app/views/vans/edit.html.erb
+++ b/app/views/vans/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Изменить вагон</h1>
 
-<%= form_for(@van.becomes(Van)) do |form| %>
+<%= form_for [@train, @van.becomes(Van)] do |form| %>
 <p><strong>Поезд: </strong><%= @van.train.number %><br />
 <strong>Вагон: </strong><%= @van.number %></p>
 
@@ -21,5 +21,5 @@
   </div>
 <% end %>
 
-<%= link_to 'Показать', van_path(@van) %> |
-<%= link_to 'Назад', vans_path %>
+<%= link_to 'Показать вагон', train_van_path(@train, @van) %> |
+<%= link_to 'К поезду', @train %>
