--- a/app/views/vans/_seats.html.erb
+++ b/app/views/vans/_seats.html.erb
@@ -1,3 +1,3 @@
 <% resource.seats_kind.each do |seats| %>
-  <td><%= resource.show_seats(seats) %> мест&nbsp<%= resource.send("#{seats}") %></td>
+  <strong><%= resource.show_seats(seats) %> мест:</strong>&nbsp<%= resource.send("#{seats}") %><br />
 <% end %>
