routes partials improved

--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -15,7 +15,7 @@
         <th>Название станции</th>
         <th>Позиция в маршруте</th>
       </thead>
-      <%= render 'sorted_to_increase' %>
+      <%= render 'sorted', type: 'increase' %>
     </table>
   <% end %>
 </p>
