arrival and departure time added

--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -13,6 +13,8 @@
     <table>
       <thead>
         <th>Название станции</th>
+        <th>Время прибытия</th>
+        <th>Время убытия</th>
         <th>Позиция в маршруте</th>
       </thead>
       <%= render 'sorted', type: 'increase' %>
