vans shallow true

--- a/app/views/vans/edit.html.erb
+++ b/app/views/vans/edit.html.erb
@@ -21,5 +21,5 @@
   </div>
 <% end %>
 
-<%= link_to 'Показать вагон', train_van_path(@train, @van) %> |
-<%= link_to 'К поезду', @train %>
+<%= link_to 'Показать вагон', van_path %> |
+<%= link_to 'К поезду', @van.train %>
