--- a/app/views/vans/_van.html.erb
+++ b/app/views/vans/_van.html.erb
@@ -1,3 +1,3 @@
 <tr>
-  <td><%= link_to "вагон ##{resource.number}", train_van_path(@train, resource) %></td>
+  <td><%= link_to "вагон ##{resource.number}", van_path(resource) %></td>
 </tr>
