--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -10,8 +10,8 @@
 
 <p>
   <strong>Текущий поезд:</strong>
-    <%= @train.number %>
+    <%= @van.train.number %>
 </p>
 
-<%= link_to 'Редактировать', edit_train_van_path(@train, @van) %>
-<%= link_to 'Назад', @train %>
+<%= link_to 'Редактировать', edit_van_path %> | 
+<%= link_to 'К поезду', @van.train %>
