--- a/app/views/layouts/_list.html.erb
+++ b/app/views/layouts/_list.html.erb
@@ -1,7 +1,8 @@
 <% type = {'Главная'          => 'root_path',
            'Список станций'   => 'railway_stations_path',
            'Список маршрутов' => 'routes_path',
-           'Список поездов'   => 'trains_path'} %>
+           'Список поездов'   => 'trains_path',
+           'Купить билет' => 'new_ticket_path'} %>
 <% type.each do |kind, path| %>
   <%= link_to kind, send(path) %>
 <% end %>
