--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,3 +1,9 @@
-<p>
-  поиск
-</p>
+<%= form_for(@search) do |form| %>
+  <%= form.collection_select :user_id, User.all, :id, :id %>
+  <%= form.label :title, 'Выберите станции' %>
+  <%= form.label :title, 'Начальная станция:' %>
+  <%= form.collection_select :start_station_id, RailwayStation.all, :id, :title %>
+  <%= form.label :title, 'Конечная станция:' %>
+  <%= form.collection_select :finish_station_id, RailwayStation.all, :id, :title %>
+  <%= form.submit 'Поиск' %>
+<% end %>
