search result with 'choose' button

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -2,16 +2,18 @@
 <% if @search.start_station_id == @search.finish_station_id %>
   <%= 'Выберите разные станции'  %>
 <% else %>
-<% @ticket = Ticket.new %>
-  <%= form_for(@ticket) do |f| %>
-    <%= f.hidden_field :user_id, value: @search.user.id %>
-    <%= f.hidden_field :start_station_id, value: @search.start_station_id %>
-    <%= f.hidden_field :finish_station_id, value: @search.finish_station_id %>
+
     <% @search.routes.each do |route| %>
       <strong>Маршрут: </strong><%= route.title %><br />
+
       <% route.trains.each do |train| %>
-        <strong>поезд: </strong><%= train.number %><%= f.submit 'Купить' %><br />
-        <%= f.hidden_field :train_id, value: train.id %>
+        <%= form_tag new_ticket_path, method: :get do %>
+          <strong>поезд: </strong><%= train.number %>
+          <%= hidden_field_tag :user_id, @search.user.id %>
+          <%= hidden_field_tag :start_station_id, @search.start_station_id %>
+          <%= hidden_field_tag :finish_station_id, @search.finish_station_id %>
+          <%= hidden_field_tag :train_id, train.id %>
+          <%= submit_tag train.id %><br />
       <% end %>
     <% end %>
   <% end %>
