'choose' button title

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -13,7 +13,7 @@
           <%= hidden_field_tag :start_station_id, @search.start_station_id %>
           <%= hidden_field_tag :finish_station_id, @search.finish_station_id %>
           <%= hidden_field_tag :train_id, train.id %>
-          <%= submit_tag train.id %><br />
+          <%= submit_tag 'Выбрать' %><br />
       <% end %>
     <% end %>
   <% end %>
