--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@search) do |form| %>
-  <%= form.collection_select :user_id, User.all, :id, :id %>
+  <%= form.collection_select :user_id, User.all, :id, :name %>
   <%= form.label :title, 'Выберите станции' %>
   <%= form.label :title, 'Начальная станция:' %>
   <%= form.collection_select :start_station_id, RailwayStation.all, :id, :title %>
