--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -5,5 +5,5 @@
   <%= form.collection_select :start_station_id, RailwayStation.all, :id, :title %>
   <%= form.label :title, 'Конечная станция:' %>
   <%= form.collection_select :finish_station_id, RailwayStation.all, :id, :title %>
-  <%= form.submit 'Поиск' %>
+  <%= form.submit 'Поиск', class: "btn btn-primary btn-sm" %>
 <% end %>
