--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -27,12 +27,12 @@
 
   <div class='field'>
     <%= f.label :first_name, 'Имя' %>
-    <%= f.text_field :first_name %>
+    <%= f.text_field :first_name, class: 'form-control', placeholder: 'Имя' %>
   </div>
 
   <div class='field'>
     <%= f.label :last_name, 'Фамилия' %>
-    <%= f.text_field :last_name %>
+    <%= f.text_field :last_name, class: 'form-control', placeholder: 'Фамилия' %>
   </div>
 
   <div>
@@ -40,9 +40,8 @@
   </div>
 
   <div class='field'>
-    <%= f.label 'Серия и номер:' %>
-    <%= f.text_field :passport_serial, size:5 %>
-    <%= f.text_field :passport_number %>
+    <%= f.text_field :passport_serial, class: 'form-control serial', placeholder: 'Серия', size: 10 %>
+    <%= f.text_field :passport_number, class: 'form-control', placeholder: 'Номер' %>
   </div>
 
   <%= f.hidden_field :user_id, value: params[:user_id] %>
@@ -50,5 +49,5 @@
   <%= f.hidden_field :finish_station_id, value: params[:finish_station_id] %>
   <%= f.hidden_field :route_id, value: params[:route_id] %>
   <%= f.hidden_field :train_id, value: params[:train_id] %>
-  <%= f.submit 'Купить' %>
+  <%= f.submit 'Купить', class: "btn btn-primary btn-sm" %>
 <% end %>
