--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_for(@search) do |form| %>
-  <%= form.collection_select :user_id, User.all, :id, :name %>
+  <%= form.collection_select :user_id, User.all, :id, :name, {}, { class: 'btn btn-default dropdown-toggle' }  %>
   <%= form.label :title, 'Выберите станции' %>
   <%= form.label :title, 'Начальная станция:' %>
-  <%= form.collection_select :start_station_id, RailwayStation.all, :id, :title %>
+  <%= form.collection_select :start_station_id, RailwayStation.all, :id, :title, {}, { class: 'btn btn-default dropdown-toggle' } %>
   <%= form.label :title, 'Конечная станция:' %>
-  <%= form.collection_select :finish_station_id, RailwayStation.all, :id, :title %>
+  <%= form.collection_select :finish_station_id, RailwayStation.all, :id, :title, {}, { class: 'btn btn-default dropdown-toggle' }  %>
   <%= form.submit 'Поиск', class: "btn btn-primary btn-sm" %>
 <% end %>
