--- a/app/views/searches/_search_train.html.erb
+++ b/app/views/searches/_search_train.html.erb
@@ -3,8 +3,8 @@
   <%= form_tag filled_from_search_ticket_path, method: :get do %>
     <div class='train'>
       <strong>поезд: </strong><%= train.number %><br />
-      отправление: <%= route.railway_stations.find(@start_station).show_time_for('departure', route) %><br />
-      прибытие: <%= route.railway_stations.find(@finish_station).show_time_for('arrival', route) %><br />
+      отправление: <%= route.railway_stations.find(@start_station).show_time_for('departure') %><br />
+      прибытие: <%= route.railway_stations.find(@finish_station).show_time_for('arrival') %><br />
 
       <%= hidden_field_tag :user_id, @search.user.id %>
       <%= hidden_field_tag :route_id, route.id %>
