devise installed and prescribed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
 
   <body>
     <%= render 'layouts/list' %>
+
+    <p id='notice' class='notice'><%= notice %></p>
+    <p class='alert'><%= alert %></p>
+
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
