--- a/app/views/admin/railway_stations/edit.html.erb
+++ b/app/views/admin/railway_stations/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', railway_station: @railway_station %>
 
 <%= link_to 'Show', @railway_station %> |
-<%= link_to 'Back', railway_stations_path %>
+<%= link_to 'Back', admin_railway_stations_path %>
