--- a/app/views/admin/routes/show.html.erb
+++ b/app/views/admin/routes/show.html.erb
@@ -35,5 +35,5 @@
   <% end %>
 </p>
 
-<%= link_to 'Изменить', edit_route_path(@route) %> |
-<%= link_to 'Назад', routes_path %>
+<%= link_to 'Изменить', edit_admin_route_path(@route) %> |
+<%= link_to 'Назад', admin_routes_path %>
