--- a/app/views/admin/trains/index.html.erb
+++ b/app/views/admin/trains/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Доступные поезда:</h1>
 
 <table>
@@ -17,4 +15,4 @@
 
 <br>
 
-<%= link_to 'Создать новый поезд', new_train_path %>
+<%= link_to 'Создать новый поезд', new_admin_train_path %>
