--- a/app/views/layouts/_list.html.erb
+++ b/app/views/layouts/_list.html.erb
@@ -1,13 +1,14 @@
+<% if user_signed_in? %>
+Привет, <%= current_user.name %>
+<%= link_to 'Выйти', destroy_user_session_path, method: :delete, class: 'btn btn-link btn-sm' %>
+<% else %>
+<%= link_to 'Войти', new_user_session_path, class: 'btn btn-success btn-sm' %>
+<% end %><br />
 <% type = {'Главная'          => 'root_path',
-           'Список станций'   => 'railway_stations_path',
-           'Список маршрутов' => 'routes_path',
-           'Список поездов'   => 'trains_path',
+           'Список станций'   => 'admin_railway_stations_path',
+           'Список маршрутов' => 'admin_routes_path',
+           'Список поездов'   => 'admin_trains_path',
            'Купить билет' => 'new_search_path'} %>
 <% type.each do |kind, path| %>
   <%= link_to kind, send(path) %>
-<% end %>
-<% if user_signed_in? %>
-  <%= link_to 'Выйти', destroy_user_session_path, method: :delete, class: 'btn btn-link btn-sm' %>
-<% else %>
-  <%= link_to 'Войти', new_user_session_path, class: 'btn btn-success btn-sm' %>
 <% end %>
