--- a/app/views/admin/railway_stations/_railway_station.html.erb
+++ b/app/views/admin/railway_stations/_railway_station.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= railway_station.title %></td>
-  <td><%= link_to 'Показать', admin_railway_stations_path %></td>
+  <td><%= link_to 'Показать', [:admin, railway_station] %></td>
   <td><%= link_to 'Редактировать', edit_admin_railway_station_path(railway_station) %></td>
-  <td><%= link_to 'Удалить', admin_railway_stations_path, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to 'Удалить', [:admin, railway_station], method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
