--- a/app/views/admin/routes/_form.html.erb
+++ b/app/views/admin/routes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@route) do |form| %>
+<%= form_for [:admin, @route] do |form| %>
   <%= render 'common/errors', resource: @route %>
 
   <div class="field">
