stations schedule visible only for admin

--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -3,19 +3,20 @@
 <table>
   <% @search.stations.each do |station| %>
   <tr>
-    <% unless station.routes.empty? %>
-      <%= form_tag set_shedule_admin_railway_station_path(station), method: :patch do %>
-        <td><%= station.title %></td>
-        <td><%= text_field_tag :arrival_at, station.show_time_for('arrival') %></td>
-        <td><%= text_field_tag :departure_at, station.show_time_for('departure') %></td>
-        <td><%= submit_tag 'Обновить расписание', class: "btn btn-primary btn-sm" %></td>
+    <% if current_user.admin? %>
+      <% unless station.routes.empty? %>
+        <%= form_tag set_shedule_admin_railway_station_path(station), method: :patch do %>
+          <td><%= station.title %></td>
+          <td><%= text_field_tag :arrival_at, station.show_time_for('arrival') %></td>
+          <td><%= text_field_tag :departure_at, station.show_time_for('departure') %></td>
+          <td><%= submit_tag 'Обновить расписание', class: "btn btn-primary btn-sm" %></td>
+        <% end %>
       <% end %>
     <% end %>
   </tr>
   <% end %>
 </table>
 <%= form_for(@search) do |form| %>
-  <%= form.collection_select :user_id, User.all, :id, :name, {}, { class: 'btn btn-default dropdown-toggle' }  %>
   <%= form.label :title, 'Выберите станции' %>
   <%= form.label :title, 'Начальная станция:' %>
   <%= form.collection_select :start_station_id, RailwayStation.all, :id, :title, {}, { class: 'btn btn-default dropdown-toggle' } %>
