--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,13 +1,23 @@
 <br />
+<% @tickets = Ticket.all if current_user.admin? %>
 <% if @tickets.empty? %>
   <p>У вас нет билетов</p>
 <% else %>
-  <% @tickets.each do |ticket| %>
-    <strong>Пассажир: </strong><%= ticket.first_name %> <%= ticket.last_name %><br />
-    <strong>Маршрут: </strong><%= ticket.route.title %><br />
-    <strong>От станции: </strong><%= ticket.start_station.title %>, отпр. <%= ticket.start_station.show_time_for('departure') %><br />
-    <strong>До станции: </strong><%= ticket.finish_station.title %>, приб. <%= ticket.start_station.show_time_for('arrival') %><br />
-    <strong>Поезд: </strong><%= ticket.train.number %><br />
-    <br />
-  <% end %>
+  <table class="table table-hover">
+    <% @tickets.each do |ticket| %>
+    <tr>
+      <td>
+        <strong>Пассажир: </strong><%= ticket.first_name %> <%= ticket.last_name %><br />
+        <strong>Маршрут: </strong><%= ticket.route.title %><br />
+        <strong>От станции: </strong><%= ticket.start_station.title %>, отпр. <%= ticket.start_station.show_time_for('departure') %><br />
+        <strong>До станции: </strong><%= ticket.finish_station.title %>, приб. <%= ticket.start_station.show_time_for('arrival') %><br />
+        <strong>Поезд: </strong><%= ticket.train.number %><br />
+      </td>
+      <td style='border-left:1px solid black'>
+        <%= link_to 'Показать', ticket %><br />
+        <%= link_to 'Удалить', ticket, method: :delete, data: { confirm: 'Вы уверены?' } %><br />
+      </td>
+    </tr>
+    <% end %>
+  </table>
 <% end %>
