--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,11 @@
+<% if current_user %><p>Привет, <%= current_user.name %></p><% end %>
 <p>
-  <strong>Создано станций: </strong>
-  <%= RailwayStation.count %><br />
-  <strong>Создано маршрутов: </strong>
-  <%= Route.count %><br />
-  <strong>Создано поездов: </strong>
-  <%= Train.count %><br />
-  <strong>Создано вагонов: </strong>
-  <%= Van.count %><br />
+  У нас Вы можете купить билеты на следующие направления:
+  <% Route.all.each do |route| %>
+  <ul>
+    <li>
+      <%= route.title %>
+    </li>
+  </ul>
+  <% end %>
 </p>
