admin links passed to admin layout

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,7 +11,7 @@
   <body>
     <% if notice %><p id='notice' class='notice'><%= notice %></p><% end %>
     <% if alert %><p class='alert'><%= alert %></p><% end %>
-    <%= render 'layouts/list' %>
+    <%= render 'layouts/admin_list' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
