--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   <body>
     <% if notice %><p id='notice' class='notice'><%= notice %></p><% end %>
     <% if alert %><p class='alert'><%= alert %></p><% end %>
-    <%= render 'layouts/list' %>
+    <%= render 'layouts/admin_list' if current_user.admin? %>
+    <%= render 'layouts/list' unless current_user.admin %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
