--- a/app/views/layouts/_admin_list.html.erb
+++ b/app/views/layouts/_admin_list.html.erb
@@ -1,13 +1,12 @@
 <% if user_signed_in? %>
   Аккаунт: <%= current_user.email %>
   <%= link_to 'Выйти', destroy_user_session_path, method: :delete, class: 'btn btn-link btn-sm' %><br />
-  <% type = {'Главная'                           => 'root_path',
-             'Список пользователей'              => 'admin_users_path',
+  <% type = {'Список пользователей'              => 'admin_users_path',
              'Список станций'                    => 'admin_railway_stations_path',
              'Список маршрутов'                  => 'admin_routes_path',
              'Список поездов'                    => 'admin_trains_path',
              'Купить билет для пользователя'     => 'new_search_path',
-             'Купленные билеты'                  => 'tickets_path'} %>
+             'Купленные билеты'                  => 'admin_tickets_path'} %>
 
   <% type.each do |kind, path| %>
     <%= link_to kind, send(path) %> |
