--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,4 @@
+<h4>Список пользователей</h4>
 <table>
   <thead>
     <th>id</th>
@@ -16,7 +17,7 @@
     <td><%= user.last_name %></td>
     <td><%= user.email %></td>
     <td><%= user.tickets.count %></td>
-    <td><%= link_to 'Показать', admin_user_path(user) %> | 
+    <td><%= link_to 'Показать', admin_user_path(user) %> |
         <%= link_to 'Изменить', edit_admin_user_path(user) %> |
         <%= link_to 'Удалить', admin_user_path(user), method: :delete, data: { confirm: 'Вы уверены?' } %></td>
   </tr>
