bug from l18 fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
   <body>
     <% if notice %><p id='notice' class='notice'><%= notice %></p><% end %>
     <% if alert %><p class='alert'><%= alert %></p><% end %>
-    <%= render 'layouts/admin_list' if current_user.admin? %>
-    <%= render 'layouts/list' unless current_user.admin %>
+    <% if current_user %>
+      <%= render 'layouts/admin_list' if current_user.admin? %>
+      <%= render 'layouts/list' unless current_user.admin %>
+    <% else %>
+      <%= render 'layouts/list' %>
+    <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
