--- a/app/views/admin/railway_stations/_form.html.erb
+++ b/app/views/admin/railway_stations/_form.html.erb
@@ -2,11 +2,11 @@
   <%= render 'common/errors', resource: @railway_station %>
 
   <div class="field">
-    <%= form.label :title, 'Введите название станции:' %>
+    <%= form.label :title %>
     <%= form.text_field :title, id: :railway_station_title %>
   </div>
 
   <div class="actions">
-    <%= form.submit "#{ @railway_station.new_record? ? 'Создать станцию' : 'Изменить станцию'}" %>
+    <%= form.submit t('.submit', action: @railway_station.new_record? ? 'Создать' : 'Изменить') %>
   </div>
 <% end %>
