railway station model localizated

--- a/app/views/admin/railway_stations/edit.html.erb
+++ b/app/views/admin/railway_stations/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Изменить станцию</h1>
+<h4><%= t('admin.railway_stations.edit.title') %></h4>
 
 <%= render 'form', railway_station: @railway_station %>
 
