--- a/app/views/admin/railway_stations/index.html.erb
+++ b/app/views/admin/railway_stations/index.html.erb
@@ -1,9 +1,9 @@
-<h4>Имеющиеся станции:</h4>
+<h4><%= t('admin.railway_stations.index.title') %></h4>
 
 <table>
   <thead>
     <tr>
-      <th>Наименование:</th>
+      <th><%= t('table.thead.name') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,4 +15,4 @@
 
 <br>
 
-<%= link_to 'Создать новую станцию', new_admin_railway_station_path %>
+<%= link_to t('common.create_new_station'), new_admin_railway_station_path %>
