--- a/app/views/admin/railway_stations/_railway_station.html.erb
+++ b/app/views/admin/railway_stations/_railway_station.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= railway_station.title %></td>
-  <td><%= link_to t('common.show'), [:admin, railway_station] %></td>
-  <td><%= link_to t('common.edit'), edit_admin_railway_station_path(railway_station) %></td>
-  <td><%= link_to t('common.delete'), [:admin, railway_station], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to t('links.show'), [:admin, railway_station] %></td>
+  <td><%= link_to t('links.edit'), edit_admin_railway_station_path(railway_station) %></td>
+  <td><%= link_to t('links.delete'), [:admin, railway_station], method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
