--- a/app/views/admin/railway_stations/index.html.erb
+++ b/app/views/admin/railway_stations/index.html.erb
@@ -1,4 +1,4 @@
-<h4><%= t('admin.railway_stations.index.title') %></h4>
+<h4><%= t('.title') %></h4>
 
 <table>
   <thead>
@@ -15,4 +15,4 @@
 
 <br>
 
-<%= link_to t('common.create_new_station'), new_admin_railway_station_path %>
+<%= link_to t('links.new_station'), new_admin_railway_station_path %>
