--- a/app/views/admin/railway_stations/show.html.erb
+++ b/app/views/admin/railway_stations/show.html.erb
@@ -14,5 +14,5 @@
   <% end %>
 <% end %>
 
-<%= link_to t('common.edit'), edit_admin_railway_station_path(@railway_station) %> |
-<%= link_to t('common.back'), admin_railway_stations_path %>
+<%= link_to t('links.edit'), edit_admin_railway_station_path(@railway_station) %> |
+<%= link_to t('links.back'), admin_railway_stations_path %>
