--- a/app/views/admin/routes/_sorted.html.erb
+++ b/app/views/admin/routes/_sorted.html.erb
@@ -7,7 +7,7 @@
       <td><%= form_tag set_index_admin_railway_station_path(station), method: :patch do %>
             <%= number_field_tag :position, station.show_index_on(@route)  %>
             <%= hidden_field_tag :route_id, @route.id %>
-            <%= submit_tag 'Изменить' %>
+            <%= submit_tag t('links.edit') %>
           <% end %>
       </td>
     </tr>
