--- a/app/views/admin/routes/index.html.erb
+++ b/app/views/admin/routes/index.html.erb
@@ -1,9 +1,9 @@
-<h4>Маршруты:</h4>
+<h4><%= t('.title') %></h4>
 
 <table>
   <thead>
     <tr>
-      <th>Наименование:</th>
+      <th><%= t('table.thead.name') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,4 +15,4 @@
 
 <br>
 
-<%= link_to 'Новый маршрут', new_admin_route_path %>
+<%= link_to t('links.new_route'), new_admin_route_path %>
