--- a/app/views/admin/routes/new.html.erb
+++ b/app/views/admin/routes/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Новый маршрут</h1>
+<h4><%= t('.title') %></h4>
 
 <%= render 'form' %>
-<%= link_to 'Назад', admin_routes_path %>
+<%= link_to t('links.back'), admin_routes_path %>
