--- a/app/views/admin/trains/new.html.erb
+++ b/app/views/admin/trains/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Новый поезд</h1>
+<h4><%= t('.title') %></h4>
 
 <%= render 'form' %>
 
-<%= link_to 'Назад', admin_trains_path %>
+<%= link_to t('links.back'), admin_trains_path %>
