--- a/app/views/admin/trains/_train.html.erb
+++ b/app/views/admin/trains/_train.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= train.number %></td>
   <td><%= train.vans.count %></td>
-  <td><%= link_to 'Показать', admin_train_path(train) %></td>
-  <td><%= link_to 'Изменить', edit_admin_train_path(train) %></td>
-  <td><%= link_to 'Удалить', admin_train_path(train), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to t('links.show'), admin_train_path(train) %></td>
+  <td><%= link_to t('links.edit'), edit_admin_train_path(train) %></td>
+  <td><%= link_to t('links.delete'), admin_train_path(train), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
