--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit t('.submit') %>
+    <%= f.submit t('.submit'), class: 'btn btn-success' %>
   </div>
 <% end %>
 
