--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -2,7 +2,8 @@
 <% @start_station = @search.start_station_id %>
 <% @finish_station = @search.finish_station_id %>
 <% if @start_station == @finish_station %>
-  <%= 'Выберите разные станции'  %>
+  <p>Выберите разные станции</p>
+  <%= link_to t('links.back'), new_search_path, class: 'btn btn-default' %>
 <% else %>
   <%= render 'search_routes' %>
 <% end %>
